[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asx-automation"
version = "0.1.0"
description = "MCP-callable ASX announcement downloader"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.52.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "mcp>=1.1.0",
  "fastmcp>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
asx-mcp = "asx_tool.mcp_server:main"
asx-download = "asx_tool.mcp_server:_run_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
